# p11-remote

./: .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  NEWS  README  configure.ac  engine.c  libp11-kit-engine.so.1  openssl-compat.h  p11-kit-remote.socket  p11-kit-remote.socket.5  p11-kit-remote@.service.5  p11-kit-remote@.service.in  test.sh
